test/visibility/submodule-in-file/errors/test-PrivateIncludePublic.chpl
import PrivateIncludePublic;

writeln(PrivateIncludePublic.SubModule.subVar);
writeln(PrivateIncludePublic.SubModule.subFn());
