test/visibility/submodule-in-file/errors/test-PrivateIncludePublic.good
test-PrivateIncludePublic.chpl:3: error: cannot access 'SubModule' as it is private to 'PrivateIncludePublic'
test-PrivateIncludePublic.chpl:4: error: cannot access 'SubModule' as it is private to 'PrivateIncludePublic'
